documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P42W32API ULONG __stdcall PC429_PutFldData(ULONG msgval,ULONG dataval);

P42W32API ULONG __stdcall PC429_PutFldLabel(ULONG msgval,USHORT labelval);

P42W32API ULONG __stdcall PC429_PutFldSDI(ULONG msgval,USHORT sdival);

P42W32API ULONG __stdcall PC429_PutFldValue(ULONG msgval,ULONG dataval,USHORT startbit,USHORT endbit);

P42W32API ULONG __stdcall PC429_RdClk(HCARD handleval);

P42W32API ULONG __stdcall PC429_RdGap(ULONG addrval,HCARD handleval);

P42W32API ULONG __stdcall PC429_RdMsg(ULONG addrval,HCARD handleval);

P42W32API USHORT __stdcall PC429_RdOpt(HCARD handleval);

P42W32API VOID __stdcall PC429_RdSeq(HCARD handleval,LPUSHORT bottom,LPUSHORT top,LPUSHORT tail,LPUSHORT head);

P42W32API ULONG __stdcall PC429_RdTime(ULONG addrval,HCARD handleval);

P42W32API USHORT __stdcall PC429_ReadLbl(USHORT label,HCARD handleval);

P42W32API USHORT __stdcall PC429_ReadSym(USHORT symbol,HCARD handleval);

P42W32API USHORT __stdcall PC429_Ready(HCARD handleval);

P42W32API VOID __stdcall PC429_Rearm(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_Reset(HCARD handleval);

P42W32API ERRVAL __stdcall PC429_SchedBuild(INT nummsgs,LPINT minperiod,LPINT maxperiod,BOOL speed,INT channel,HCARD handleval);

P42W32API ERRVAL __stdcall PC429_SchedBuildEx(INT basemsgnum,INT nummsgs,LPINT minperiod,LPINT maxperiod,INT speed,LPVOID buf,ULONG bufsize,INT channel,HCARD handleval);

P42W32API ULONG __stdcall PC429_SchedMsg(USHORT index,ULONG msgaddr,ULONG gapval,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_SelfTest(USHORT channels,HCARD handleval);

P42W32API VOID __stdcall PC429_SeqRecParam(INT channels,INT mode,INT interval,HCARD handleval);

P42W32API ULONG __stdcall PC429_SeqRecRd(LPULONG buf,ULONG bufsize,HCARD handleval);

P42W32API VOID __stdcall PC429_SeqRecStart(HCARD handleval);

P42W32API VOID __stdcall PC429_SeqRecStop(HCARD handleval);

P42W32API VOID __stdcall PC429_SeqStat(USHORT value,HCARD handleval);

P42W32API USHORT __stdcall PC429_Single(USHORT channels,HCARD handleval);

P42W32API USHORT __stdcall PC429_SpeedClk(USHORT speed,HCARD handleval);

P42W32API VOID __stdcall PC429_Start(HCARD handleval);

P42W32API VOID __stdcall PC429_STI(HCARD handleval);

P42W32API VOID __stdcall PC429_Stop(HCARD handleval);

P42W32API ERRVAL __stdcall PC429_Test(HCARD handleval);

P42W32API VOID __stdcall PC429_ToAscii(ULONG value,LPSTR asciistr,USHORT numbits,USHORT radixval);

P42W32API VOID __stdcall PC429_Uncheck(HCARD handleval);

P42W32API USHORT __stdcall PC429_UserCode(LPBYTE usercode,USHORT count,HCARD handleval);

P42W32API VOID __stdcall PC429_VerStr(LPSTR strptr,USHORT count);

P42W32API VOID __stdcall PC429_WipeMem(HCARD handleval);

P42W32API VOID __stdcall PC429_WrClk(ULONG clock,HCARD handleval);

P42W32API VOID __stdcall PC429_WrGap(ULONG addrval,ULONG gapval,HCARD handleval);

P42W32API VOID __stdcall PC429_WrMsg(ULONG addrval,ULONG msgval,HCARD handleval);

P42W32API VOID __stdcall PC429_WrOpt(USHORT option,HCARD handleval);

P42W32API VOID __stdcall PC429_WrSeq(HCARD handleval,USHORT bottom,USHORT top,USHORT tail,USHORT head);

P42W32API VOID __stdcall PC429_WrTime(ULONG addrval,ULONG timeval,HCARD handleval);