documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB

    Public Declare Function PC429_PutFldData Lib "P42W32.DLL" Alias "_PC429_PutFldData@8" (ByVal msgval As Integer, ByVal dataval As Integer) As Integer
    Public Declare Function PC429_PutFldLabel Lib "P42W32.DLL" Alias "_PC429_PutFldLabel@8" (ByVal msgval As Integer, ByVal labelval As Short) As Integer
    Public Declare Function PC429_PutFldSDI Lib "P42W32.DLL" Alias "_PC429_PutFldSDI@8" (ByVal msgval As Integer, ByVal sdival As Short) As Integer
    Public Declare Function PC429_PutFldValue Lib "P42W32.DLL" Alias "_PC429_PutFldValue@16" (ByVal msgval As Integer, ByVal dataval As Integer, ByVal startbit As Short, ByVal endbit As Short) As Integer
    Public Declare Function PC429_RdClk Lib "P42W32.DLL" Alias "_PC429_RdClk@4" (ByVal handleval As Integer) As Integer
    Public Declare Function PC429_RdGap Lib "P42W32.DLL" Alias "_PC429_RdGap@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_RdMsg Lib "P42W32.DLL" Alias "_PC429_RdMsg@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_RdOpt Lib "P42W32.DLL" Alias "_PC429_RdOpt@4" (ByVal handleval As Integer) As Short
    Public Declare Sub PC429_RdSeq Lib "P42W32.DLL" Alias "_PC429_RdSeq@20" (ByVal handleval As Integer, ByRef bottom As Short, ByRef top As Short, ByRef tail As Short, ByRef head As Short)
    Public Declare Function PC429_RdTime Lib "P42W32.DLL" Alias "_PC429_RdTime@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_ReadLbl Lib "P42W32.DLL" Alias "_PC429_ReadLbl@8" (ByVal label As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_ReadSym Lib "P42W32.DLL" Alias "_PC429_ReadSym@8" (ByVal symbol As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_Ready Lib "P42W32.DLL" Alias "_PC429_Ready@4" (ByVal handleval As Integer) As Short
    Public Declare Sub PC429_Rearm Lib "P42W32.DLL" Alias "_PC429_Rearm@8" (ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_Reset Lib "P42W32.DLL" Alias "_PC429_Reset@4" (ByVal handleval As Integer)
    Public Declare Function PC429_SchedBuild Lib "P42W32.DLL" Alias "_PC429_SchedBuild@24" (ByVal nummsgs As Integer, ByRef minperiod As Integer, ByRef maxperiod As Integer, ByVal speed As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_SchedBuildEx Lib "P42W32.DLL" Alias "_PC429_SchedBuildEx@36" (ByVal basemsgnum As Integer, ByVal nummsgs As Integer, ByRef minperiod As Integer, ByRef maxperiod As Integer, ByVal speed As Integer, ByRef buf As Integer, ByVal bufsize As Integer, ByVal channel As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_SchedMsg Lib "P42W32.DLL" Alias "_PC429_SchedMsg@20" (ByVal index As Short, ByVal msgaddr As Integer, ByVal gapval As Integer, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_SelfTest Lib "P42W32.DLL" Alias "_PC429_SelfTest@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_SeqRecParam Lib "P42W32.DLL" Alias "_PC429_SeqRecParam@16" (ByVal channels As Integer, ByVal mode As Integer, ByVal interval As Integer, ByVal handleval As Integer)
    Public Declare Function PC429_SeqRecRd Lib "P42W32.DLL" Alias "_PC429_SeqRecRd@12" (ByRef buf As Integer, ByVal bufsize As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub PC429_SeqRecStart Lib "P42W32.DLL" Alias "_PC429_SeqRecStart@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_SeqRecStop Lib "P42W32.DLL" Alias "_PC429_SeqRecStop@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_SeqStat Lib "P42W32.DLL" Alias "_PC429_SeqStat@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Function PC429_Single Lib "P42W32.DLL" Alias "_PC429_Single@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_SpeedClk Lib "P42W32.DLL" Alias "_PC429_SpeedClk@8" (ByVal speed As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_Start Lib "P42W32.DLL" Alias "_PC429_Start@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_STI Lib "P42W32.DLL" Alias "_PC429_STI@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_Stop Lib "P42W32.DLL" Alias "_PC429_Stop@4" (ByVal handleval As Integer)
    Public Declare Function PC429_Test Lib "P42W32.DLL" Alias "_PC429_Test@4" (ByVal handleval As Integer) As Integer
    Public Declare Sub PC429_ToAscii Lib "P42W32.DLL" Alias "_PC429_ToAscii@16" (ByVal value As Integer, ByVal asciistr As String, ByVal numbits As Short, ByVal radixval As Short)
    Public Declare Sub PC429_Uncheck Lib "P42W32.DLL" Alias "_PC429_Uncheck@4" (ByVal handleval As Integer)
    Public Declare Function PC429_UserCode Lib "P42W32.DLL" Alias "_PC429_UserCode@12" (ByRef usercode As Integer, ByVal count As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_VerStr Lib "P42W32.DLL" Alias "_PC429_VerStr@8" (ByVal strptr As String, ByVal count As Short)
    Public Declare Sub PC429_WipeMem Lib "P42W32.DLL" Alias "_PC429_WipeMem@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_WrClk Lib "P42W32.DLL" Alias "_PC429_WrClk@8" (ByVal clock As Integer, ByVal handleval As Integer)
    Public Declare Sub PC429_WrGap Lib "P42W32.DLL" Alias "_PC429_WrGap@12" (ByVal addrval As Integer, ByVal gapval As Integer, ByVal handleval As Integer)
    Public Declare Sub PC429_WrMsg Lib "P42W32.DLL" Alias "_PC429_WrMsg@12" (ByVal addrval As Integer, ByVal msgval As Integer, ByVal handleval As Integer)
    Public Declare Sub PC429_WrOpt Lib "P42W32.DLL" Alias "_PC429_WrOpt@8" (ByVal optionval As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_WrSeq Lib "P42W32.DLL" Alias "_PC429_WrSeq@20" (ByVal handleval As Integer, ByVal bottom As Short, ByVal top As Short, ByVal tail As Short, ByVal head As Short)
    Public Declare Sub PC429_WrTime Lib "P42W32.DLL" Alias "_PC429_WrTime@12" (ByVal addrval As Integer, ByVal timeval As Integer, ByVal handleval As Integer)
